# wavereader

./: .gitignore  CMakeLists.txt  LICENSE.MD  README.MD  doxyfile  waveread.h
cmake/: httpsFetchExtract.cmake
src/: CMakeLists.txt  waveread.h  waveread.hpp
test/: CMakeLists.txt  samples.tar.sha256  samples.zip.md5  test.cpp
